--- a/index.html.html
+++ b/index.html.html
@@ -22,7 +22,7 @@
       /* 2017-style top header bar */
       .top-header {
         width: 100%;
-        height: 40px; /* close to Roblox 2017 header height */
+        height: 40px;
         background-color: #653e35;
         display: flex;
         align-items: center;
@@ -32,8 +32,8 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
-        margin-left: 8px; /* reduced left gap */
-        margin-right: 6px; /* tighter spacing to icon */
+        margin-left: 8px;
+        margin-right: 6px;
         cursor: pointer;
       }
 
@@ -42,17 +42,19 @@
         height: 2px;
         background: white;
         margin: 2px 0;
-        border-radius: 1px; /* sharp but slightly edged */
+        border-radius: 1px;
       }
 
       .header-icon {
         height: 28px;
-        margin-right: 12px; /* balanced spacing before Games */
+        margin-right: 12px;
       }
 
       .right-links {
-        margin-left: auto; /* pushes to the far right */
+        margin-left: auto;
         margin-right: 16px;
+        display: flex;
+        align-items: center;
       }
 
       .right-links span {
@@ -73,6 +75,24 @@
         background: rgba(255, 255, 255, 0.25);
       }
 
+      /* ✅ Sign Up button ONLY */
+      .signup-btn {
+        background: #2ecc71;
+        color: #ffffff;
+        padding: 4px 10px;
+        border-radius: 4px; /* slightly rounded, not pill */
+        font-size: 14px;
+        font-weight: 600;
+      }
+
+      .signup-btn:hover {
+        background: #27c068;
+      }
+
+      .signup-btn:active {
+        background: #24b060;
+      }
+
       .nav-links {
         margin-left: 20px;
       }
@@ -83,16 +103,16 @@
         font-weight: 500;
         margin-right: 18px;
         cursor: pointer;
-        padding: 4px 6px; /* allows hover background without affecting layout */
-        border-radius: 2px; /* sharp edges */
+        padding: 4px 6px;
+        border-radius: 2px;
       }
 
       .nav-links span:hover {
-        background: rgba(255, 255, 255, 0.15); /* light grey/white opacity hover */
+        background: rgba(255, 255, 255, 0.15);
       }
 
       .nav-links span:active {
-        background: rgba(255, 255, 255, 0.25); /* slightly stronger when clicked */
+        background: rgba(255, 255, 255, 0.25);
       }
 
       .search-wrap {
@@ -102,68 +122,11 @@
       }
 
       .nav-search {
-        height: 36px; /* bigger input */
-        width: 320px; /* longer search bar */
-        background: #ffffff;
-        border: 1px solid #bfbfbf;
-        border-radius: 2px; /* sharp but cornered edges */
-        padding: 0 36px 0 12px; /* room for icon on the right */
-        font-size: 15px; /* text unchanged */
-        outline: none;
-        vertical-align: middle;
-        margin-top: -4px; /* vertically centered */
-      }
-
-      .search-icon {
-        position: absolute;
-        right: 8px;
-        height: 20px; /* larger, clearly visible icon */
-        pointer-events: none; /* clicking still focuses input */
-        opacity: 0.9;
-      }
-
-      .nav-search::placeholder {
-        color: #9a9a9a; /* grey but not too grey */
-      }
-
-      .nav-search {
-        height: 28px; /* noticeably taller */
-        width: 220px; /* longer like real 2017 Roblox */
-        background: #ffffff;
-        border: 1px solid #bfbfbf;
-        border-radius: 2px; /* sharp but cornered edges */
-        padding: 0 8px;
-        font-size: 14px; /* scaled text */
-        outline: none;
-        vertical-align: middle;
-      }
-
-      .nav-search::placeholder {
-        color: #9a9a9a; /* grey but not too grey */
-      }
-
-      .nav-search {
-        height: 24px; /* scaled slightly up */
-        width: 190px; /* slightly longer for accuracy */
-        background: #ffffff;
-        border: 1px solid #bfbfbf;
-        border-radius: 2px; /* sharp but cornered edges */
-        padding: 0 7px;
-        font-size: 13px;
-        outline: none;
-        vertical-align: middle;
-      }
-
-      .nav-search::placeholder {
-        color: #9a9a9a; /* grey but not too grey */
-      }
-
-      .nav-search {
         height: 22px;
         width: 160px;
         background: #ffffff;
         border: 1px solid #bfbfbf;
-        border-radius: 2px; /* sharp but cornered edges */
+        border-radius: 2px;
         padding: 0 6px;
         font-size: 12px;
         outline: none;
@@ -171,16 +134,24 @@
       }
 
       .nav-search::placeholder {
-        color: #9a9a9a; /* grey but not too grey */
+        color: #9a9a9a;
+      }
+
+      .search-icon {
+        position: absolute;
+        right: 6px;
+        height: 14px;
+        pointer-events: none;
+        opacity: 0.9;
       }
 
       .chat-bar {
         position: fixed;
         bottom: 0;
-        right: 120px; /* right side with a large gap from the edge */
-        width: 220px; /* short bar */
+        right: 120px;
+        width: 220px;
         height: 36px;
-        background-color: #653e35; /* same as header */
+        background-color: #653e35;
         display: flex;
         align-items: center;
         padding-left: 12px;
@@ -201,8 +172,8 @@
         bottom: 0;
         right: 120px;
         width: 220px;
-        height: 220px; /* high but not too high */
-        background: #f2f2f2; /* white but a lil darker */
+        height: 220px;
+        background: #f2f2f2;
         border: 1px solid #cfcfcf;
         border-bottom: none;
         display: none;
@@ -210,27 +181,23 @@
         justify-content: center;
         z-index: 1000;
       }
-
-      .chat-popup img {
-        width: 48px;
-        height: 48px;
-      }
     </style>
   </head>
 
   <body>
-    <!-- Plain header bar (intentionally empty) -->
     <div class="top-header">
       <div class="hamburger">
         <span></span>
         <span></span>
         <span></span>
       </div>
+
       <img
         class="header-icon"
         src="https://i.postimg.cc/7LYNHZYN/M-04-01-2026.png"
         alt="Logo"
       />
+
       <div class="nav-links">
         <span>Games</span>
         <span>Catalog</span>
@@ -245,13 +212,13 @@
           />
         </div>
       </div>
+
       <div class="right-links">
         <span>Login</span>
-        <span>Sign Up</span>
+        <span class="signup-btn">Sign Up</span>
       </div>
     </div>
 
-    <!-- Bottom chat bar -->
     <div class="chat-bar">
       <span>Chat</span>
     </div>
@@ -261,7 +228,8 @@
       const chatBar = document.querySelector('.chat-bar');
       const chatPopup = document.getElementById('chatPopup');
       chatBar.addEventListener('click', () => {
-        chatPopup.style.display = chatPopup.style.display === 'block' ? 'none' : 'block';
+        chatPopup.style.display =
+          chatPopup.style.display === 'block' ? 'none' : 'block';
       });
     </script>
   </body>
