--- a/index.html.html
+++ b/index.html.html
@@ -1,236 +1,293 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Home - Mizuki</title>
-    <link rel="icon" href="https://i.postimg.cc/jdQPjqkn/M-04-01-2026.png">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <style>
-      /* Reset */
-      * {
-        box-sizing: border-box;
-      }
+<head>
+  <meta charset="UTF-8" />
+  <title>Home - Mizuki</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-      body {
-        margin: 0;
-        padding: 0;
-        background: #e6e6e6;
-        font-family: 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
-        font-weight: 500;
-      }
+  <style>
+    * { box-sizing: border-box; }
 
-      /* 2017-style top header bar */
-      .top-header {
-        width: 100%;
-        height: 40px;
-        background-color: #653e35;
-        display: flex;
-        align-items: center;
-      }
+    body {
+      margin: 0;
+      padding: 0;
+      background: #e6e6e6;
+      font-family: Arial, sans-serif;
+    }
 
-      .hamburger {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        margin-left: 8px;
-        margin-right: 6px;
-        cursor: pointer;
-      }
+    .top-header {
+      width: 100%;
+      height: 40px;
+      background-color: #653e35;
+      display: flex;
+      align-items: center;
+      position: relative;
+      z-index: 1000;
+    }
 
-      .hamburger span {
-        width: 14px;
-        height: 2px;
-        background: white;
-        margin: 2px 0;
-        border-radius: 1px;
-      }
+    .hamburger {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      margin-left: 8px;
+      margin-right: 6px;
+      cursor: pointer;
+    }
 
-      .header-icon {
-        height: 28px;
-        margin-right: 12px;
-      }
+    .hamburger span {
+      width: 14px;
+      height: 2px;
+      background: white;
+      margin: 2px 0;
+      border-radius: 1px;
+    }
 
-      .right-links {
-        margin-left: auto;
-        margin-right: 16px;
-        display: flex;
-        align-items: center;
-      }
+    .header-icon {
+      height: 28px;
+      margin-right: 12px;
+    }
 
-      .right-links span {
-        color: white;
-        font-size: 18px;
-        font-weight: 500;
-        margin-left: 12px;
-        cursor: pointer;
-        padding: 4px 6px;
-        border-radius: 2px;
-      }
+    .nav-links {
+      margin-left: 20px;
+      display: flex;
+      align-items: center;
+    }
 
-      .right-links span:hover {
-        background: rgba(255, 255, 255, 0.15);
-      }
+    .nav-links span,
+    .right-links span {
+      color: white;
+      font-size: 18px;
+      font-weight: 500;
+      margin-right: 18px;
+      cursor: pointer;
+      padding: 4px 6px;
+      border-radius: 2px;
+    }
 
-      .right-links span:active {
-        background: rgba(255, 255, 255, 0.25);
-      }
+    .nav-links span:hover,
+    .right-links span:hover {
+      background: rgba(255,255,255,0.15);
+    }
 
-      /* ✅ Sign Up button ONLY */
-      .signup-btn {
-        background: #2ecc71;
-        color: #ffffff;
-        padding: 4px 10px;
-        border-radius: 4px; /* slightly rounded, not pill */
-        font-size: 14px;
-        font-weight: 600;
-      }
+    .search-wrap {
+      position: relative;
+      display: inline-flex;
+      align-items: center;
+    }
 
-      .signup-btn:hover {
-        background: #27c068;
-      }
+    .nav-search {
+      height: 22px;
+      width: 160px;
+      background: white;
+      border: 1px solid #bfbfbf;
+      border-radius: 2px;
+      padding: 0 6px;
+      font-size: 12px;
+    }
 
-      .signup-btn:active {
-        background: #24b060;
-      }
+    .search-icon {
+      position: absolute;
+      right: 6px;
+      height: 14px;
+      opacity: 0.9;
+    }
 
-      .nav-links {
-        margin-left: 20px;
-      }
+    .right-links {
+      margin-left: auto;
+      margin-right: 16px;
+      display: flex;
+      align-items: center;
+    }
 
-      .nav-links span {
-        color: white;
-        font-size: 18px;
-        font-weight: 500;
-        margin-right: 18px;
-        cursor: pointer;
-        padding: 4px 6px;
-        border-radius: 2px;
-      }
+    .signup-btn {
+      background: #2ecc71;
+      color: white;
+      padding: 4px 10px;
+      border-radius: 4px;
+      font-size: 14px;
+      font-weight: 600;
+    }
 
-      .nav-links span:hover {
-        background: rgba(255, 255, 255, 0.15);
-      }
+    /* ---------- LOGIN UI (UNCHANGED) ---------- */
 
-      .nav-links span:active {
-        background: rgba(255, 255, 255, 0.25);
-      }
+    :root {
+      --primary-color: #8A5149;
+      --primary-color-hover: #9C6A5E;
+      --text-color-secondary: #777;
+      --radius-ui: 6px;
+      --focus-blue: rgba(66,153,225,0.45);
+      --focus-blue-border: #4299e1;
+    }
 
-      .search-wrap {
-        position: relative;
-        display: inline-flex;
-        align-items: center;
-      }
+    .login-wrapper {
+      background: white;
+      border-radius: 0;
+      box-shadow: 0 6px 12px rgba(0,0,0,0.18);
+    }
 
-      .nav-search {
-        height: 22px;
-        width: 160px;
-        background: #ffffff;
-        border: 1px solid #bfbfbf;
-        border-radius: 2px;
-        padding: 0 6px;
-        font-size: 12px;
-        outline: none;
-        vertical-align: middle;
-      }
+    .login-card {
+      width: 320px;
+      padding: 22px;
+    }
 
-      .nav-search::placeholder {
-        color: #9a9a9a;
-      }
+    .login-input {
+      width: 100%;
+      margin: 10px 0;
+      padding: 10px;
+      font-size: 15px;
+      border-radius: var(--radius-ui);
+      border: 1px solid #ccc;
+    }
 
-      .search-icon {
-        position: absolute;
-        right: 6px;
-        height: 14px;
-        pointer-events: none;
-        opacity: 0.9;
-      }
+    .row {
+      display: flex;
+      gap: 10px;
+      margin-top: 12px;
+    }
 
-      .chat-bar {
-        position: fixed;
-        bottom: 0;
-        right: 120px;
-        width: 220px;
-        height: 36px;
-        background-color: #653e35;
-        display: flex;
-        align-items: center;
-        padding-left: 12px;
-        border-top-left-radius: 4px;
-        border-top-right-radius: 4px;
-        cursor: pointer;
-        z-index: 1001;
-      }
+    .btn {
+      width: 100%;
+      padding: 9px;
+      font-size: 15px;
+      cursor: pointer;
+      border-radius: var(--radius-ui);
+      border: none;
+    }
 
-      .chat-bar span {
-        color: white;
-        font-size: 14px;
-        font-weight: 500;
-      }
+    .btn-primary {
+      background: var(--primary-color);
+      color: white;
+    }
 
-      .chat-popup {
-        position: fixed;
-        bottom: 0;
-        right: 120px;
-        width: 220px;
-        height: 220px;
-        background: #f2f2f2;
-        border: 1px solid #cfcfcf;
-        border-bottom: none;
-        display: none;
-        align-items: center;
-        justify-content: center;
-        z-index: 1000;
-      }
-    </style>
-  </head>
+    .btn-secondary {
+      background: white;
+      border: 1px solid var(--text-color-secondary);
+    }
 
-  <body>
-    <div class="top-header">
-      <div class="hamburger">
-        <span></span>
-        <span></span>
-        <span></span>
+    .forgot-row {
+      margin-top: 6px;
+    }
+
+    .forgot-row a {
+      font-size: 13px;
+      color: var(--primary-color);
+      text-decoration: none;
+    }
+
+    /* ---------- LOGIN DROPDOWN POSITION ---------- */
+
+    .login-dropdown {
+      position: absolute;
+      top: 40px;
+      right: 16px;
+      display: none;
+      z-index: 2000;
+    }
+
+    /* ---------- CHAT ---------- */
+
+    .chat-bar {
+      position: fixed;
+      bottom: 0;
+      right: 120px;
+      width: 220px;
+      height: 36px;
+      background-color: #653e35;
+      display: flex;
+      align-items: center;
+      padding-left: 12px;
+      border-top-left-radius: 4px;
+      border-top-right-radius: 4px;
+      cursor: pointer;
+      z-index: 1001;
+    }
+
+    .chat-bar span {
+      color: white;
+      font-size: 14px;
+    }
+
+    .chat-popup {
+      position: fixed;
+      bottom: 0;
+      right: 120px;
+      width: 220px;
+      height: 220px;
+      background: #f2f2f2;
+      border: 1px solid #cfcfcf;
+      border-bottom: none;
+      display: none;
+      z-index: 1000;
+    }
+  </style>
+</head>
+
+<body>
+
+  <div class="top-header">
+    <div class="hamburger">
+      <span></span><span></span><span></span>
+    </div>
+
+    <img class="header-icon" src="https://i.postimg.cc/7LYNHZYN/M-04-01-2026.png">
+
+    <div class="nav-links">
+      <span>Games</span>
+      <span>Catalog</span>
+      <span>Create</span>
+      <span>Download</span>
+
+      <div class="search-wrap">
+        <input class="nav-search" type="text" placeholder="Search">
+        <img class="search-icon" src="https://i.postimg.cc/brWkyNP8/Screenshot-2026-01-05-151653-removebg-preview.png">
       </div>
+    </div>
 
-      <img
-        class="header-icon"
-        src="https://i.postimg.cc/7LYNHZYN/M-04-01-2026.png"
-        alt="Logo"
-      />
+    <div class="right-links">
+      <span id="loginToggle">Login</span>
+      <span class="signup-btn">Sign Up</span>
+    </div>
 
-      <div class="nav-links">
-        <span>Games</span>
-        <span>Catalog</span>
-        <span>Create</span>
-        <span>Download</span>
-        <div class="search-wrap">
-          <input class="nav-search" type="text" placeholder="Search" />
-          <img
-            class="search-icon"
-            src="https://i.postimg.cc/brWkyNP8/Screenshot-2026-01-05-151653-removebg-preview.png"
-            alt=""
-          />
+    <!-- LOGIN DROPDOWN -->
+    <div class="login-dropdown" id="loginDropdown">
+      <div class="login-wrapper">
+        <div class="login-card">
+          <input class="login-input" type="text" placeholder="Username">
+          <input class="login-input" type="password" placeholder="Password">
+
+          <div class="row">
+            <button class="btn btn-primary">Log In</button>
+            <button class="btn btn-secondary">Sign Up</button>
+          </div>
+
+          <div class="forgot-row">
+            <a href="/Login/ResetPasswordRequest.aspx">Forgot Password?</a>
+          </div>
         </div>
       </div>
-
-      <div class="right-links">
-        <span>Login</span>
-        <span class="signup-btn">Sign Up</span>
-      </div>
     </div>
+  </div>
 
-    <div class="chat-bar">
-      <span>Chat</span>
-    </div>
-    <div class="chat-popup" id="chatPopup"></div>
+  <div class="chat-bar"><span>Chat</span></div>
+  <div class="chat-popup" id="chatPopup"></div>
 
-    <script>
-      const chatBar = document.querySelector('.chat-bar');
-      const chatPopup = document.getElementById('chatPopup');
-      chatBar.addEventListener('click', () => {
-        chatPopup.style.display =
-          chatPopup.style.display === 'block' ? 'none' : 'block';
-      });
-    </script>
-  </body>
+  <script>
+    const loginToggle = document.getElementById('loginToggle');
+    const loginDropdown = document.getElementById('loginDropdown');
+
+    loginToggle.addEventListener('click', () => {
+      loginDropdown.style.display =
+        loginDropdown.style.display === 'block' ? 'none' : 'block';
+    });
+
+    const chatBar = document.querySelector('.chat-bar');
+    const chatPopup = document.getElementById('chatPopup');
+
+    chatBar.addEventListener('click', () => {
+      chatPopup.style.display =
+        chatPopup.style.display === 'block' ? 'none' : 'block';
+    });
+  </script>
+
+</body>
 </html>
